--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .direnv/
+
+# Database is created on host system
+*.db.sqlite3
