Install ember-parse-adapter

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.0.0-beta.18",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.2"
+    "ember-export-application-global": "^1.0.2",
+    "ember-parse-adapter": "git://github.com/jacobthemyth/ember-parse-adapter.git#dfe5a2d64f8fec94c3628eca6c90c242ed62aebc"
   }
 }
